BHV-6683: Prevent unnecessary relayout by clipping overflow.
Enyo-DCO-1.1-Signed-off-by: Aaron Tam <aaron.tam@lge.com>

--- a/css/GridListImageItem.less
+++ b/css/GridListImageItem.less
@@ -5,7 +5,7 @@
 .moon-gridlist-imageitem {
 	width: 100%;
 	height: 100%;
-	overflow: visible;
+	overflow: hidden;
 	background-clip: padding-box;
 	border: 5px solid transparent;
 	.caption, 
